src/parser/snapshots/clight__parser__tests__block_stmt.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Ok(
    Block {
        statements: [
            Decl {
                declaration: Decl {
                    token: Token {
                        kind: Let,
                        token: "let",
                        offset: 1,
                    },
                    kind: VarDecl {
                        ident: Token {
                            kind: Ident,
                            token: "a",
                            offset: 5,
                        },
                        spec: None,
                        init: Scalar(
                            Number(
                                1,
                            ),
                        ),
                    },
                },
            },
            Decl {
                declaration: Decl {
                    token: Token {
                        kind: Let,
                        token: "let",
                        offset: 12,
                    },
                    kind: VarDecl {
                        ident: Token {
                            kind: Ident,
                            token: "b",
                            offset: 16,
                        },
                        spec: None,
                        init: Scalar(
                            Binary {
                                lhs: Number(
                                    2,
                                ),
                                op: Token {
                                    kind: Plus,
                                    token: "+",
                                    offset: 22,
                                },
                                rhs: Binary {
                                    lhs: Number(
                                        3,
                                    ),
                                    op: Token {
                                        kind: Star,
                                        token: "*",
                                        offset: 26,
                                    },
                                    rhs: Number(
                                        5,
                                    ),
                                },
                            },
                        ),
                    },
                },
            },
        ],
    },
)
