src/parser/snapshots/clight__parser__tests__let_decl_without_semicolon.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Err(
    MietteDiagnostic {
        message: "Expected semicolon after declaration",
        code: None,
        severity: None,
        help: Some(
            "Unexpected token: Token { kind: Eof, token: \"\", offset: 9 }",
        ),
        url: None,
        labels: Some(
            [
                LabeledSpan {
                    label: Some(
                        "here",
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            9,
                        ),
                        length: 0,
                    },
                    primary: false,
                },
            ],
        ),
    },
)
