src/parser/snapshots/clight__parser__tests__type_decl_expr.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Err(
    MietteDiagnostic {
        message: "Expected a valid type, got: 'decimal'",
        code: None,
        severity: None,
        help: None,
        url: None,
        labels: Some(
            [
                LabeledSpan {
                    label: Some(
                        "here",
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            17,
                        ),
                        length: 1,
                    },
                    primary: false,
                },
            ],
        ),
    },
)
