src/parser/snapshots/clight__parser__tests__type_decl_usertype.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Ok(
    Decl {
        token: Token {
            kind: Type,
            token: "type",
            offset: 0,
        },
        kind: TypeDecl {
            oldtype: TypeSpec {
                token: Token {
                    kind: Ident,
                    token: "myusertype",
                    offset: 14,
                },
                kind: UserType,
            },
            newtype: Token {
                kind: Ident,
                token: "mytype",
                offset: 5,
            },
        },
    },
)
